<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    
    <TextView
        android:id="@+id/scrnexpression"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:singleLine="true"
        android:ellipsize="start"
        android:gravity="end"
        android:text=""/>
    <TextView
        android:id="@+id/resulta"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:ellipsize="end"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/bttnclear"
        style="@style/operatorsButton"
        android:text="@string/bttnclear"/>
    <TextView
        android:id="@+id/divise"
        style="@style/operatorsButton"
        android:text="@string/divise"/>
    <TextView
        android:id="@+id/multipl"
        style="@style/operatorsButton"
        android:text="@string/multipl" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numbseven"
            style="@style/numericButton"
            android:text="@string/numbseven"/>
        <TextView
            android:id="@+id/numbeight"
            style="@style/numericButton"
            android:text="@string/numbeight"/>
        <TextView
            android:id="@+id/numbnine"
            style="@style/numericButton"
            android:text="@string/numbnine"/>
        <TextView
            android:id="@+id/bttnless"
            style="@style/operatorsButton"
            android:text="@string/bttnless"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numbfour"
            style="@style/numericButton"
            android:text="@string/numbfour"/>
        <TextView
            android:id="@+id/numbfive"
            style="@style/numericButton"
            android:text="@string/numbfive"/>
        <TextView
            android:id="@+id/numbsix"
            style="@style/numericButton"
            android:text="@string/numbsix"/>
        <TextView
            android:id="@+id/bttnplus"
            style="@style/operatorsButton"
            android:text="@string/bttnplus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numbone"
            style="@style/numericButton"
            android:text="@string/numbone"/>
        <TextView
            android:id="@+id/numbtwo"
            style="@style/numericButton"
            android:text="@string/numbtwo"/>
        <TextView
            android:id="@+id/numbthree"
            style="@style/numericButton"
            android:text="@string/numbthree"/>
        <TextView
            android:id="@+id/bttnPow"
            style="@style/operatorsButton"
            android:text="@string/bttnpow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/numbzero"
            style="@style/numericButton"
            android:text="@string/numbzero"/>
        <TextView
            android:id="@+id/bttnpoint"
            style="@style/numericButton"
            android:text="@string/bttnpoint"/>
        <TextView
            android:id="@+id/bttnback"
            style="@style/numericButton"
            android:text="@string/bttnback"/>
        <TextView
            android:id="@+id/bttnequal"
            style="@style/equalButton"
            android:text="@string/bttnequal"/>
    </LinearLayout>
</LinearLayout>



